# sudoku-cli

./: .gitignore  Cargo.toml  build.rs  sudoku.save
src/: app.rs  main.rs  sudoku.rs
