[package]
name = "sudoku"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.86"
bincode = "1.3.3"
rand = "0.8.5"
ratatui = "0.27.0"
serde = { version = "1.0.204", features = ["derive"] }

[build-dependencies]
winresource = "0.1.17"
